Fixed styling. Fixed dynamic delete button z-index and add functionality. clearAllMessages now clearing the private array.

--- a/FrontEnd/single-page-applications/gmp_chatty/styles.css
+++ b/FrontEnd/single-page-applications/gmp_chatty/styles.css
@@ -1,10 +1,14 @@
 body {
   margin: 0 auto;
-  padding: 20px;
 }
 
 #navBar {
   position: fixed;
+  background: white;
+  top: 0;
+  padding: 20px;
+  width: 100%;
+  z-index: 100;
 }
 
 .dark {
@@ -16,10 +20,19 @@ body {
   font-size: 1.7em;
 }
 
+#messageContainer {
+  margin: 175px auto 0;
+}
+
 #messageBoard {
   margin: 0 auto;
   padding: 20px;
   width: 90%;
   height: 1000px;
   border: 1px black solid;
+}
+
+.message, .col-xs-2 {
+  padding: 5px;
+  z-index: 1;
 }
